Added module to package json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.1.0",
   "description": "Autolinking component for React Native",
   "author": "Josh Swan <josh@disruptivelabs.io>",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
