--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-autolink",
-  "version": "4.1.0",
+  "name": "react-native-autolink-benetics",
+  "version": "4.1.1",
   "description": "Autolinking component for React Native",
   "author": "Josh Swan <josh@disruptivelabs.io>",
   "type": "module",
